# status-led

./: .gitignore  LICENSE.md  README.md  pyproject.toml  secrets.env.example  setup.py
.github/workflows/: ci.yml
case/: ClaudeLed.3mf
driver/: claude_settings_hooks_example.json  led_cli.py  led_daemon.py  led_driver.py  protocol.py
driver/states/: claude.json  default.json
examples/: claude_settings_hooks_example.json
examples/claude/: README.md  led-hook.sh  settings_hooks_example.json
examples/timer/: README.md  run.sh
firmware/: platformio.ini
firmware/src/: main.cpp
integrations/claude/: README.md  hook.py  integration.json  led-hook.sh  settings_hooks_example.json  states.json
integrations/gitlab/: README.md  integration.json  poller.py  states.json
integrations/timer/: README.md  integration.json  run.py  timer.py
scripts/: install.sh  test.sh  upload.sh
src/status_led/: __init__.py  __main__.py  aggregator.py  cli.py  config.py  daemon.py  daemon_socket.py  manifest.py  profiles.py  protocol.py  serial_session.py  transport.py  wire.py
src/status_led/commands/: __init__.py  daemon.py  raw.py  service.py  smoke.py  status.py  upload_firmware.py  validate_integrations.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_cli.py  test_commands_raw.py  test_commands_status.py  test_config.py  test_daemon.py  test_daemon_socket.py  test_dispatch.py  test_profiles.py  test_protocol.py  test_serial_session.py  test_transport.py  test_validate_integrations.py  test_wire.py
